<resources>
    <string name="app_name">APA</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nocerrarsesion">No cerrar sesión</string>
    <string name="iniciar">Iniciar</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="login" translatable="false">Login</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="olvidecontra">Olvide mi contraseña</string>
    <string name="powerby" translatable="false">EliteUTH</string>
    <string name="infoAUTH10">Automatización de Procesos Académicos</string>
    <string name="open">Menú</string>
    <string name="close">Actividades</string>
    <string name="title_activity_item_card_view" translatable="false">itemCardView</string>
    <string name="title_activity_configuracion" translatable="false">Configuracion</string>
    <string name="title_activity_actividad_editable" translatable="false">ActividadEditable</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="colorActividad">Color de Actividad</string>
    <string name="recordarme">Recordarme</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="provider_name">Actividades</string>
    <string name="color_swatch_description">Color %1$d</string>
    <string name="color_swatch_description_selected">Color %1$d selected</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="dialog_title">Color de Actividad</string>
    <string name="dia">Dia</string>
    <string name="title_activity_principal_crear_equipo" translatable="false"></string>
    <string name="nombreText">Nombre:</string>

    <string name="title_activity_principal_calificaciones">Calificaciones</string>

    <string name="agregarEquipo">Agregar Equipo</string>
    <string name="EquipoTI">Equipos TI</string>
        <string name="title_activity_actividades" translatable="false">Actividades</string>
    <string name="title_activity_splashsinconfiguracion" translatable="false">Verificación de datos</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="agregar_imagen">Agregar Imagen</string>
    <string name="agregar_archivo">Agregar archivo</string>
    <string name="Hacer_una_copia">Hacer una copia</string>
    <string name="compartir">Compartir</string>
    <string name="eliminar">Eliminar</string>
    <string name="calificar">Calificar</string>
    <string name="color">Color</string>
    <string name="equipo">Equipo</string>
    <string name="Calificacion">Calificación</string>
    <string name="Grupos_al_que_desea_copiar">Grupos al que desea copiar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="Copia_creada">Copia creada</string>
    <string name="Borrar_actividad_permanentemente">Borrar actividad permanentemente?</string>
    <string name="Actividad_elminada">Actividad Eliminada</string>
    <string name="No_se_puede_agregar_mas_de_una_imagen">No se puede agregar mas de una imagen</string>
    <string name="No_se_puede_agregar_mas_de_un_archivo">No se puede agregar mas de un archivo</string>
    <string name="Título_de_la_actividad">Título de la actividad:</string>
    <string name="Compartir_en">Compartir en</string>
    <string name="El_Archivo_sobrepasa_el_maximo">El Archivo sobrepasa el máximo</string>
    <string name="No_hay_alumnos">No hay alumnos</string>
    <string name="Campos_vacios">Campos vacios</string>
    <string name="No_hay_internet">No hay internet</string>
    <string name="Error_en_el_usuario_o_contraseña">Error en el usuario o contraseña</string>
    <string name="Movido_a_Actividades">Movido a Actividades</string>
    <string name="Movido_a_Papelera">Papelera</string>
    <string name="Reguresar">Regresar</string>
    <string name="Papelera">Papelera</string>
    <string name="Salir">Salir</string>
    <string name="ayuda">Ayuda y Comentarios</string>
    <string name="Cargando">Cargando...</string>

</resources>

