<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login"
    >
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/cordinatorLogin"></android.support.design.widget.CoordinatorLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:fillViewport="false"
            android:layout_weight="0.50">

            <LinearLayout
                android:id="@+id/verticalLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:weightSum="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:maxWidth="500px"
                    android:adjustViewBounds="true"
                    android:id="@+id/imageView"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/autha"
                    android:layout_marginTop="30px"

                    android:layout_weight="0.08" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView2"
                    android:layout_weight="0.08" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/ediTextUser"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/usuario"
                    android:layout_weight="0.08"
                    android:drawableLeft="@mipmap/ic_action_person"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView"
                    android:layout_weight="0.08" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editTextPass"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/contraseña"
                    android:layout_weight="0.08"
                    android:drawableLeft="@mipmap/ic_action_secure"
                    android:nextFocusDown="@+id/button"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView4"
                    android:layout_weight="0.08" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/nocerrarsesion"
                    android:id="@+id/checkBoxNoCerrar"
                    android:checked="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.08" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textVie"
                    android:layout_weight="0.08" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/iniciar"
                    android:id="@+id/buttonIniciar"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.08"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@color/background"
                    android:textColor="@color/blanco"
                    android:drawableRight="@mipmap/ic_action_next_item"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView3"
                    android:layout_weight="0.08" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/olvidecontra"
                    android:id="@+id/textViewOlvide"
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                    android:textColor="@color/background"
                    android:layout_weight="0.08" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/textView7"
                    android:layout_weight="0.08" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/infoAUTH10"
            android:id="@+id/textView6"
            android:autoText="false"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_gravity="left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/powerby"
            android:id="@+id/textInfo"
            android:autoText="false"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_gravity="right"
            android:drawableRight="@drawable/pineahat" />

    </LinearLayout>
</RelativeLayout>
